# Multi-Agent-Data-Analyst

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: format.yml
.idx/: dev.nix
app/: agent_orchestrator.py  visualization_server.py
app/agent/: da_agent.py
app/agent/data_science_tools_agents/: __init__.py  orchestration.py
app/agent/data_science_tools_agents/agents/: __init__.py  data_cleaning_agent.py  data_loader_tools_agent.py  data_visualization_agent.py  data_wrangling_agent.py  feature_engineering_agent.py  sql_database_agent.py
app/agent/data_science_tools_agents/ds_agents/: __init__.py  eda_tools_agent.py
app/agent/data_science_tools_agents/ml_agents/: __init__.py  h2o_ml_agent.py  mlflow_tools_agent.py
app/agent/data_science_tools_agents/multiagents/: __init__.py  pandas_data_analyst.py  sql_data_analyst.py  supervised_data_analyst.py
app/agent/data_science_tools_agents/parsers/: parsers.py
app/agent/data_science_tools_agents/templates/: __init__.py  agent_templates.py
app/agent/data_science_tools_agents/tools/: data_loader.py  dataframe.py  eda.py  h2o.py  mlflow.py  sql.py
app/agent/data_science_tools_agents/utils/: html.py  logging.py  matplotlib.py  messages.py  plotly.py  regex.py
app/diagram/: arch.dio
app/rag/: README.md
app/tools/: __init__.py  data_analyst_agent.py  sql_data_analyst_agent.py
app/v1/routers/: base_router.py
app/v1/routers/agent_workflow/: graph.py  persistence.py  router.py
app/v1/routers/users/: users_router.py
notebook/: poc.ipynb
notebook/logs/: data_visualization.py
tests/: conftest.py  test_agent_orchestrator.py  test_main.py
tests/tools/: conftest.py  test_data_analyst_agent.py  test_sql_data_analyst_agent.py
